--- a/problema01.html
+++ b/problema01.html
@@ -3,4 +3,5 @@
     const qntbebida = Number(prompt("qual foi aquantidade em litros de bebida consumida?").replace("," , "."));
     const total = bebida * qntbebida;
     alert(`O valor total é de R$${total.toFixed(2).replace("." , ",")}`);
+    //modificando para treinar commit
 </script>
